force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/Apttus_Billing__InvoiceRun__c.object-meta.xml
<CustomObject>
    <description>Represents an Immediate or Scheduled invoice creation batch job.</description>
    <label>Invoice Run</label>
    <nameField>
        <label>Invoice Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>