force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__AutoApplyCreditMemo__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AutoApplyCreditMemo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Option to control whether or not Credit Memos will be automatically applied
to Invoices generated by this Invoice Run.</description>
    <inlineHelpText>Option to control whether or not Credit Memos will be automatically applied
to Invoices.</inlineHelpText>
    <label>Auto Apply Credit Memo</label>
    <type>Checkbox</type>
</CustomField>