force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__AutoApplyCreditMemoOrder__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AutoApplyCreditMemoOrder__c</fullName>
    <description>The ordering precedence to use when automatically applying Credit Memos to Invoice.</description>
    <inlineHelpText>The ordering precedence to use when automatically applying Credit Memos to Invoice.</inlineHelpText>
    <label>Auto Apply Credit Memo Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oldest Invoices 1st</fullName>
                <default>true</default>
                <label>Oldest Invoices 1st</label>
            </value>
            <value>
                <fullName>Most Recent Invoices 1st</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>