force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__AutoApproveAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AutoApproveAmount__c</fullName>
    <description>Auto approve invoices based on the amount specified here.</description>
    <inlineHelpText>Auto approve invoices based on the amount specified here.</inlineHelpText>
    <label>Auto Approve Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>