force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__AutoApproveCreditMemos__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AutoApproveCreditMemos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approve credit memos automatically if checked.</description>
    <inlineHelpText>Approve credit memos automatically if checked.</inlineHelpText>
    <label>Auto Approve Credit Memos</label>
    <type>Checkbox</type>
</CustomField>