force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__AutoApproveInvoices__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AutoApproveInvoices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approve invoices automatically if checked based on the condition. Approve all if there is no condition.</description>
    <inlineHelpText>Approve invoices automatically if checked based on the condition. Approve all if there is no condition.</inlineHelpText>
    <label>Auto Approve Invoices</label>
    <type>Checkbox</type>
</CustomField>