force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__AutoApproveOperator__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AutoApproveOperator__c</fullName>
    <description>Comparison operator to evaluate auto approve of invoices.</description>
    <inlineHelpText>Comparison operator to evaluate auto approve of invoices.</inlineHelpText>
    <label>Auto Approve Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than</fullName>
            </value>
            <value>
                <fullName>Less than or equal to</fullName>
            </value>
            <value>
                <fullName>Greater than</fullName>
            </value>
            <value>
                <fullName>Greater than or equal to</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>