force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__AutoSendCreditMemoEmail__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AutoSendCreditMemoEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Option to send credit memo email automatically (as part of the invoice run) if it is approved.</description>
    <inlineHelpText>Option to send credit memo email automatically (as part of the invoice run) if it is approved.</inlineHelpText>
    <label>Auto Send Credit Memo Email</label>
    <type>Checkbox</type>
</CustomField>