force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__AutoSendInvoiceEmail__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AutoSendInvoiceEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Option to send invoice email automatically as part of the invoice run.</description>
    <inlineHelpText>Option to send invoice email automatically as part of the invoice run.</inlineHelpText>
    <label>Auto Send Invoice Email</label>
    <type>Checkbox</type>
</CustomField>