force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__CreditMemoCreationOption__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CreditMemoCreationOption__c</fullName>
    <description>The various ways to create Credit Memos during an Invoice Run.</description>
    <inlineHelpText>The various ways to create Credit Memos during an Invoice Run.</inlineHelpText>
    <label>Credit Memo Creation Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Credit Memo for Negative Invoice</fullName>
            </value>
            <value>
                <fullName>Separate Credit Memo for each Negative Schedule</fullName>
            </value>
            <value>
                <fullName>Single Credit Memo for all Negative Schedules per Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>