force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__CreditMemoOverrideTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CreditMemoOverrideTemplate__c</fullName>
    <description>An optional name of the Template to use when rendering a Credit Memo.</description>
    <inlineHelpText>An optional name of the Template to use when rendering a Credit Memo.</inlineHelpText>
    <label>Credit Memo Override Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>