force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceDate__c</fullName>
    <description>The date stamped on the invoice.</description>
    <inlineHelpText>The date stamped on the invoice.</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>