force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__InvoiceDateType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceDateType__c</fullName>
    <description>The mechanism to obtain the Invoice Date.</description>
    <inlineHelpText>The mechanism to obtain the Invoice Date.</inlineHelpText>
    <label>Invoice Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User Defined</fullName>
                <default>true</default>
                <label>User Defined</label>
            </value>
            <value>
                <fullName>Ready for Invoice Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>