force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__MonthlyWeek__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__MonthlyWeek__c</fullName>
    <description>Represents the week numbers of a month.</description>
    <inlineHelpText>Represents the week numbers of a month.</inlineHelpText>
    <label>Monthly Week</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>the 1st</fullName>
            </value>
            <value>
                <fullName>the 2nd</fullName>
            </value>
            <value>
                <fullName>the 3rd</fullName>
            </value>
            <value>
                <fullName>the 4th</fullName>
            </value>
            <value>
                <fullName>the last</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>