force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__OverrideTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__OverrideTemplate__c</fullName>
    <description>An optional name of the Invoice Template to use when rendering the Invoice.</description>
    <inlineHelpText>An optional name of the Invoice Template to use when rendering the Invoice.</inlineHelpText>
    <label>Invoice Override Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>