force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__PeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PeriodEndDate__c</fullName>
    <description>The end date when the scheduled job will stop running.</description>
    <inlineHelpText>The end date when the scheduled job will stop running.</inlineHelpText>
    <label>Schedule Run To</label>
    <type>Date</type>
</CustomField>