force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__PeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PeriodStartDate__c</fullName>
    <description>The start date when the scheduled job will start running.</description>
    <inlineHelpText>The start date when the scheduled job will start running.</inlineHelpText>
    <label>Schedule Run From</label>
    <type>Date</type>
</CustomField>