force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__PreferredStartMinute__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PreferredStartMinute__c</fullName>
    <description>The preferred minute (15 min interval) of the day when the scheduled job will be added to the job queue.</description>
    <inlineHelpText>The preferred minute (15 min interval) of the day when the scheduled job will be added to the job queue.</inlineHelpText>
    <label>Preferred Start Minute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>