force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__ProcessthruDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ProcessthruDate__c</fullName>
    <description>The date used to collect relevant pending billing schedules up to (including) this date.</description>
    <inlineHelpText>The date used to collect relevant pending billing schedules up to (including) this date.</inlineHelpText>
    <label>Process thru Date</label>
    <type>Date</type>
</CustomField>