force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__ProcessthruDateOffset__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ProcessthruDateOffset__c</fullName>
    <description>Number of days to add to the date of scheduled run</description>
    <inlineHelpText>Number of days to add to the date of scheduled run</inlineHelpText>
    <label>Process thru Date Offset</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-6</fullName>
            </value>
            <value>
                <fullName>-5</fullName>
            </value>
            <value>
                <fullName>-4</fullName>
            </value>
            <value>
                <fullName>-3</fullName>
            </value>
            <value>
                <fullName>-2</fullName>
            </value>
            <value>
                <fullName>-1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>+1</fullName>
            </value>
            <value>
                <fullName>+2</fullName>
            </value>
            <value>
                <fullName>+3</fullName>
            </value>
            <value>
                <fullName>+4</fullName>
            </value>
            <value>
                <fullName>+5</fullName>
            </value>
            <value>
                <fullName>+6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>