force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__ProcessthruDayMonthOption__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ProcessthruDayMonthOption__c</fullName>
    <description>Helps in deriving Process thru date for a scheduled invoice run.</description>
    <inlineHelpText>Helps in deriving Process thru date for a scheduled invoice run.</inlineHelpText>
    <label>Process thru Day Month Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Previous</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
                <default>true</default>
                <label>Current</label>
            </value>
            <value>
                <fullName>Next</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>