force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__RunType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__RunType__c</fullName>
    <description>The type of an invoice run.</description>
    <inlineHelpText>The type of an invoice run.</inlineHelpText>
    <label>Run Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>