force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__ScheduledJobId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ScheduledJobId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The job ID of a scheduled job.</description>
    <inlineHelpText>The job ID of a scheduled job.</inlineHelpText>
    <label>Scheduled Job Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>