force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__ScheduleType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ScheduleType__c</fullName>
    <description>The type of the schedule.</description>
    <inlineHelpText>The type of the schedule.</inlineHelpText>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly by date</fullName>
            </value>
            <value>
                <fullName>Monthly by day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>