force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__SplitInvoicesByOrder__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__SplitInvoicesByOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create separate invoice for each order if checked.</description>
    <inlineHelpText>Create separate invoice for each order if checked.</inlineHelpText>
    <label>Split Invoices By Order</label>
    <type>Checkbox</type>
</CustomField>