force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__SubCategory__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__SubCategory__c</fullName>
    <description>Custom Option Sub-category. Can be used by the Invoice Filter callback to determine the context of a given Invoice Run.</description>
    <inlineHelpText>Custom Option Sub-category. Can be used by the Invoice Filter callback to determine the context of a given Invoice Run.</inlineHelpText>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>