force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__SuppressInvoicesAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__SuppressInvoicesAmount__c</fullName>
    <description>Suppress creation of invoices based on the amount specified here.</description>
    <inlineHelpText>Suppress creation of invoices based on the amount specified here.</inlineHelpText>
    <label>Suppress Invoices Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>