force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__SuppressInvoicesOperator__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__SuppressInvoicesOperator__c</fullName>
    <description>Comparison operator to use to suppress creation of invoices.</description>
    <inlineHelpText>Comparison operator to use to suppress creation of invoices.</inlineHelpText>
    <label>Suppress Invoices Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than</fullName>
            </value>
            <value>
                <fullName>Less than or equal to</fullName>
            </value>
            <value>
                <fullName>Equal to</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>