force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/fields/Apttus_Billing__WeekDay__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__WeekDay__c</fullName>
    <description>Holds the names of week days.</description>
    <inlineHelpText>Holds the names of week days.</inlineHelpText>
    <label>Week Day</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>