force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/listViews/Apttus_Billing__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Billing__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Billing__RunType__c</columns>
    <columns>Apttus_Billing__PreferredStartHour__c</columns>
    <columns>Apttus_Billing__PreferredStartMinute__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>