force-app/main/default/objects/Apttus_Billing__InvoiceRun__c/listViews/Apttus_Billing__All1.listView-meta.xml
<ListView>
    <fullName>Apttus_Billing__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>